--- a/php/includes/head.html
+++ b/php/includes/head.html
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Activité PHP promo SIMPLON Boulogne sur Mer" />
-    <meta name="keywords" content="HTML, CSS, PHP, Bootstrap, Bootswatch, SIMPLON, Boulogne" />
-    <meta name="author" content="Nicolas HERBEZ" />
+    <meta name="description" content="Jeu de combat tour par tour - Eden Attack" />
+    <meta name="keywords" content="Eden Attack, Turn by turn base game" />
+    <meta name="author" content="No-Game-No-Pain" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
     <title>Eden Attack</title>
