--- a/php/CSS/Acceuil.css
+++ b/php/CSS/Acceuil.css
@@ -1,3 +1,25 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+
 #main{
     height: 100vh;
+    background-image: url(../images/Acceuil.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+}
+.foot{
+    width: 100%;
+    position: absolute;
+    bottom: 5px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.foot a{
+    color: white;
 }
