--- a/php/includes/Acceuil.html
+++ b/php/includes/Acceuil.html
@@ -1,6 +1,6 @@
 <section id="main">
     
+    <div class="foot">
+        No-Game-No-Pain - <a href="https://github.com/No-Game-No-Pain" target="_blank">Git hub</a>
+    </div>
 </section>
-<footer class="mx-auto text-center mt-3">
-    No-Game-No-Pain - <a href="https://github.com/No-Game-No-Pain" target="_blank">Git hub</a>
-</footer>
