--- a/php/includes/Acceuil.html
+++ b/php/includes/Acceuil.html
@@ -1,5 +1,6 @@
 <section id="main">
-    
+    <h1>Eden Attack</h1>
+    <button class='glowing-btn'><span class='glowing-txt'>C<span class='faulty-letter'>L</span>ICK</span></button>
     <div class="foot">
         No-Game-No-Pain - <a href="https://github.com/No-Game-No-Pain" target="_blank">Git hub</a>
     </div>
