--- a/php/includes/Acceuil.html
+++ b/php/includes/Acceuil.html
@@ -1,6 +1,13 @@
 <section id="main">
     <h1>Eden Attack</h1>
-    <button class='glowing-btn'><span class='glowing-txt'>C<span class='faulty-letter'>L</span>ICK</span></button>
+    <div class="flex">
+        <div class="container">
+            <div class="btn"><a href="#">Button création</a>
+        </div>
+        <div class="container">
+            <div class="btn"><a href="#">Button sélection</a>
+        </div>
+    </div>
     <div class="foot">
         No-Game-No-Pain - <a href="https://github.com/No-Game-No-Pain" target="_blank">Git hub</a>
     </div>
