--- a/php/CSS/Acceuil.css
+++ b/php/CSS/Acceuil.css
@@ -2,6 +2,8 @@
     margin: 0px;
     padding: 0px;
 }
+@import url(//db.onlinewebfonts.com/c/b27d4ad5fd7f7c5044c7cbbf2dad758d?family=Imprint+MT+Shadow);
+@import url('https://fonts.cdnfonts.com/css/cutive');
 
 
 #main{
@@ -15,10 +17,14 @@ h1{
     text-align: center;
     font-size: 96px;
     padding-top: 140px;
+    padding-bottom: 100px;
+    font-family: imprint mt shadow;
 }
 /* Boutton */
+.center{
+    gap: 200px;
+}
 .container {
-	width: 1000px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
@@ -54,6 +60,7 @@ h1{
 	overflow: hidden;
 	color: #fff;
 	font-weight: 400px;
+    font-size: 24px;
 	z-index: 1;
 	transition: 0.5s;
 	backdrop-filter: blur(15px);
@@ -121,6 +128,12 @@ h1{
 	box-shadow: 0 0 5px #ff1f71, 0 0 15px #ff1f71, 0 0 30px #ff1f71,
 		0 0 60px #ff1f71;
 }
+.center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
 /*button fin */
 .foot{
     width: 100%;
@@ -131,6 +144,32 @@ h1{
     align-items: center;
     justify-content: center;
 }
+/* paragraph */
+.paragraph{
+    position: absolute;
+    transform: translate(465px, 110px);
+    display: flex;
+    font-size: 34px;
+    font-family: imprint mt shadow;
+    line-height: 32px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 200px;
+    width: 1102px;
+    border-radius: 17px;
+    background: rgba(0, 0, 0, 0.40);
+    color: white;
+}
+.paragraph p {
+    padding: 20px;
+    line-height: 32px;
+}
+
+/* footer */
 .foot a{
     color: white;
+}
+.foot{
+    font-size: 24px;
 }
