--- a/php/includes/Acceuil.html
+++ b/php/includes/Acceuil.html
@@ -1,4 +1,4 @@
-<section id="main">
+<div id="main">
     <h1>Eden Attack</h1>
     <div class="center">
         <div class="container">
@@ -22,4 +22,4 @@
     <div class="foot">
         No-Game-No-Pain - <a href="https://github.com/No-Game-No-Pain" target="_blank">Git hub</a>
     </div>
-</section>
+</div>
