--- a/php/CSS/add.css
+++ b/php/CSS/add.css
@@ -7,12 +7,15 @@ body{
 }
 .border{
     border-color: rgba(0, 0, 0, 0.043) !important;
-    padding: 10px;
+    padding: 2px;
     border-radius: 10px;
     background-color: #00000040;
     font-family: Imprint MT Shadow;
     font-weight: 600;
-    border-width: thin !important;
+    border-width: 2px !important;
+    
+    border-left: 2px !important;
+    border-right: 2px !important;
 }
 .dropd{
 color: #070707 !important;
@@ -36,4 +39,7 @@ border-radius: 10px;}
 }
 .mar{
     margin-top: 120px !important;
+}
+li{
+    list-style-type: none;
 }
