--- a/php/CSS/add.css
+++ b/php/CSS/add.css
@@ -5,41 +5,188 @@ body{
     background-attachment: fixed;
     background-position-x: center;
 }
-.border{
-    border-color: rgba(0, 0, 0, 0.043) !important;
-    padding: 2px;
+.container-add{
+    width: 100%;
+    padding-right: var(--bs-gutter-x, 0.75rem);
+    padding-left: var(--bs-gutter-x, 0.75rem);
+    padding-top: var(--bs-gutter-x, 0.75rem);
+    padding-bottom: var(--bs-gutter-x, 0.75rem);
+    margin-right: auto;
+    margin-left: auto;
+    display: grid;
+    grid-auto-rows:  50px,50px,300px,100px,100px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 15px;
+    grid-template-areas:
+    "area1 area1  area1"
+    "area2 area6 area6"
+    "area3 area7 area8 "
+    "area4 . area9"
+    "area5 area10 area10"
+    ;
+    
+}
+.mute{
+    
+    grid-area: area1;
+}
+.mute img{
+    width: 5%;
+    float: right;
+}
+
+  
+  .input-name {
+    grid-area: area2;
+    margin-left: 10%;
+  }
+  .borders{
+    border-color: rgba(0, 0, 0, 0.043) ;
+    padding: 4px;
     border-radius: 10px;
     background-color: #00000040;
     font-family: Imprint MT Shadow;
-    font-weight: 600;
-    border-width: 2px !important;
-    
-    border-left: 2px !important;
-    border-right: 2px !important;
+    font-weight: 400;
+    border-width: 4px ;
+    color: #ffffff;
+    border-left: 2px ;
+    border-right: 2px;
 }
-.dropd{
-color: #070707 !important;
-background-color: #f8f8f9 !important;
-border-color: #f1f4f7 !important; 
-border-radius: 10px;}
-.btn-primary:hover{
-    color: #000000 !important;
-    background-color: #8a6b68 !important;
-    border-color: #8a6b68 !important; 
-    border-radius: 10px;   
+#inputField{
+    border-radius: 5px;
+    border-left: 2px ;
+    border-right: 2px ;
+    padding: 4px;
+    margin-left: 5%;
 }
-.button-color{
-    color: #ffffff !important;
-    background-color: #00000040!important;
-    border-color: #00000040 !important; 
-    border-radius: 10px; 
-    font-family: Imprint MT Shadow;
-    font-weight: 600;   
+.input-class{
+    grid-area: area3; 
+    margin-left: 12%;
+}
+.selectperso{
+    border-radius: 5px;
+    border-block-color: #b5c18a;
+    margin-left: 15px;
+    width: 32%;
+    background-color: white;
+}
+select option :hover {
+    background-color: #b5c18a;
+  }
+  .button1{
+    grid-area: area4; 
+    margin-left: 50%;
+  }
+  .description1{
+    grid-area: area5; 
+    margin-left: 10%;
+    text-align: center;
+    line-height: 1.5;
+  }
 
-}
-.mar{
-    margin-top: 120px !important;
-}
-li{
+  li{
     list-style-type: none;
 }
+.input-fraction{
+    grid-area: area6;   
+    margin-left: 40%;
+   
+}
+#inputFaction{
+    border-radius: 5px;
+    border-left: 2px ;
+    border-right: 2px ;
+    padding: 4px;
+    margin-left: 5%;
+}
+.nosfaction{
+    border-radius: 5px;
+    margin-left: 15px;
+    width: 32%;
+    background-color: white; 
+}
+.gridfaction{
+    grid-area: area7;
+    margin-left: 60%;
+}
+.factionimg{
+    position: relative;
+    display: inline-block;
+    
+  }
+  
+  .factionimg1:hover #f1 {
+    transform: translateX(-80px);
+  }
+  
+  .text-overlay1 {
+    width: 160px;
+    position: absolute;
+    top: 3%;
+    left: -350%;
+    transform: translateX(50%);
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.040);
+    color: white;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+  
+  .factionimg1:hover .text-overlay1 {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  .factionimg2:hover #f2 {
+    transform: translateX(-80px);
+  }
+  
+  .text-overlay2 {
+    width: 160px;
+    position: absolute;
+    top: 5%;
+    left: -350%;
+    transform: translateX(50%);
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.040);
+    color: white;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+  
+  .factionimg2:hover .text-overlay2 {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  .factionimg3:hover #f3 {
+    transform: translateX(-80px);
+  }
+  
+  .text-overlay3 {
+    width: 180px;
+    position: absolute;
+    top: 5%;
+    left: -350%;
+    transform: translateX(50%);
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.040);
+    color: white;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+  
+  .factionimg3:hover .text-overlay3 {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  .borderfaction {
+    border-color: rgba(0, 0, 0, 0.043);
+    padding: 4px 120px;
+    border-radius: 10px;
+    background-color: #00000040;
+    font-family: Imprint MT Shadow;
+    font-weight: 40 px;
+    border-width: 100px;
+    color: #ffffff;
+    border-left: 200px;
+    border-right: 200px;}
+
+    .grid8{
+        grid-area: area9;
+    }
