--- a/php/CSS/add.css
+++ b/php/CSS/add.css
@@ -22,7 +22,7 @@ body{
     "area2 area6 area6"
     "area3 area7 area8 "
     "area4 . area9"
-    "area5 area10 area10"
+    "area5 . area10"
     ;
     
 }
@@ -187,6 +187,31 @@ select option :hover {
     border-left: 200px;
     border-right: 200px;}
 
-    .grid8{
-        grid-area: area9;
-    }
+  .grid8{
+    margin-left: 30%;
+  }
+ .grid10{
+  grid-area: area10;
+ }
+ .bg{
+  width: 90%;
+    margin-top: 3px;
+}
+ .background{
+  width: 350px;
+  height: 200px;
+  margin-left: -100px;
+  overflow: hidden;
+ 
+  padding: 20px;
+  border-color: rgba(0, 0, 0, 0.043);
+  padding: 4px;
+  border-radius: 10px;
+  background-color: #00000040;
+  font-family: Imprint MT Shadow;
+  font-size: small;
+  text-align: center;
+  color: #ffffff;
+    
+ }
+
