--- a/php/includes/head.html
+++ b/php/includes/head.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Jeu de combat tour par tour - Eden Attack" />
