📦 NEW: game.php / bg  start

--- a/php/includes/head.html
+++ b/php/includes/head.html
@@ -8,6 +8,9 @@
     <meta name="author" content="No-Game-No-Pain" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <link rel="stylesheet" href="../CSS/Acceuil.css">
+    <link rel="stylesheet" href="../CSS/select.css">
+    <link rel="stylesheet" href="../CSS/game.css">
+
 
     <script src="/php/script/script.js"></script>
 
