--- a/php/CSS/game.css
+++ b/php/CSS/game.css
@@ -4,4 +4,13 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
+}
+.historique{
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+    background: rgba(217, 217, 217, 0.70);
+    position: fixed;
+    bottom: 0px;
 }
