--- a/php/includes/Acceuil.html
+++ b/php/includes/Acceuil.html
@@ -2,11 +2,11 @@
     <h1>Eden Attack</h1>
     <div class="center">
         <div class="container">
-            <div class="btn"><a href="#">Button création</a>
+            <div class="btn"><a href="index.php?add">Button création</a>
         </div>
         </div>
         <div class="container">
-            <div class="btn"><a href="#">Button sélection</a>
+            <div class="btn"><a href="index.php?select">Button sélection</a>
         </div>
     </div>
     </div>
