--- a/php/includes/head.html
+++ b/php/includes/head.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../CSS/Acceuil.css">
     <link rel="stylesheet" href="../CSS/select.css">
 
-    <script src="/php/script/script.js"></script>
+    <script src="../script/script.js"></script>
 
     <title>Eden Attack</title>
 
