--- a/php/CSS/select.css
+++ b/php/CSS/select.css
@@ -119,3 +119,14 @@ h2{
     height: 20%;
     width: 20%;
 }
+.players{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 65px;
+    border-radius: 17px;
+    background: rgba(0, 0, 0, 0.40);
+    color: white;
+}
