--- a/php/CSS/add.css
+++ b/php/CSS/add.css
@@ -4,6 +4,7 @@ body{
     background-size: cover;
     background-attachment: fixed;
     background-position-x: center;
+    overflow: hidden;
 }
 .container-add{
     width: 100%;
@@ -14,7 +15,7 @@ body{
     margin-right: auto;
     margin-left: auto;
     display: grid;
-    grid-auto-rows:  50px,50px,300px,100px,100px,50px;
+    grid-template-rows:  50px,50px,300px,100px,300px,10px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 15px;
     grid-template-areas:
@@ -33,7 +34,7 @@ body{
 }
 .mute img{
     width: 5%;
-    float: right;
+    margin-left: 92%;
 }
 
   
@@ -52,6 +53,7 @@ body{
     color: #ffffff;
     border-left: 2px ;
     border-right: 2px;
+    font-size: 200%;
 }
 #inputField{
     border-radius: 5px;
@@ -59,6 +61,7 @@ body{
     border-right: 2px ;
     padding: 4px;
     margin-left: 5%;
+    font-size: 130%;
 }
 .input-class{
     grid-area: area3; 
@@ -70,7 +73,8 @@ body{
     margin-left: 15px;
     
     background-color: white;
-    HEIGHT: 20px;
+    HEIGHT: 20%;
+    font-size: 150%;
 }
 select option :hover {
     background-color: #b5c18a;
@@ -78,6 +82,7 @@ select option :hover {
   .button1{
     grid-area: area4; 
     margin-left: 50%;
+    margin-top: 5%;
   }
   .description1{
     grid-area: area5; 
@@ -100,6 +105,7 @@ select option :hover {
     border-right: 2px ;
     padding: 4px;
     margin-left: 5%;
+    font-size: 130%;
 }
 .nosfaction{
     border-radius: 5px;
@@ -125,7 +131,7 @@ select option :hover {
     width: 160px;
     position: absolute;
     top: 3%;
-    left: -350%;
+    left: -100%;
     transform: translateX(50%);
     opacity: 0;
     background-color: rgba(0, 0, 0, 0.040);
@@ -145,7 +151,7 @@ select option :hover {
     width: 160px;
     position: absolute;
     top: 5%;
-    left: -350%;
+    left: -100%;
     transform: translateX(50%);
     opacity: 0;
     background-color: rgba(0, 0, 0, 0.040);
@@ -165,7 +171,7 @@ select option :hover {
     width: 180px;
     position: absolute;
     top: 5%;
-    left: -350%;
+    left: -100%;
     transform: translateX(50%);
     opacity: 0;
     background-color: rgba(0, 0, 0, 0.040);
@@ -194,15 +200,16 @@ select option :hover {
   }
  .grid10{
   grid-area: area10;
+  margin-left: -207px;
+  width: 100%;
  }
  .bg{
   width: 90%;
     margin-top: 3px;
 }
  .background{
-  width: 350px;
-  height: 200px;
-  margin-left: -100px;
+  
+  
   overflow: hidden;
  
   padding: 20px;
@@ -211,9 +218,11 @@ select option :hover {
   border-radius: 10px;
   background-color: #00000040;
   font-family: Imprint MT Shadow;
-  font-size: small;
+  font-size: 30px;
   text-align: center;
   color: #ffffff;
+  width: 440px;
+    height: 343px;
     
  }
 
@@ -347,16 +356,16 @@ padding-top: 66%;
 
 .grid11{
   grid-area: area11;
-  margin-left: auto;
-  margin-top: 20%;
+  margin-left: 85%;
+  
 }
 .grid13{
   grid-area: area13;
   margin-right: auto;
-  margin-top: 20%;
+  
 }
 .grid14{
   grid-area: area14;
-    margin-left: -120px;
-    margin-top: 3px;
+  margin-left: -47px;
+  margin-top: 8px;
 }
