--- a/php/CSS/add.css
+++ b/php/CSS/add.css
@@ -40,7 +40,7 @@ body{
   
   .input-name {
     grid-area: area2;
-    margin-left: 10%;
+    margin-left: -500px;
   }
   .borders{
     border-color: rgba(0, 0, 0, 0.043) ;
@@ -65,7 +65,8 @@ body{
 }
 .input-class{
     grid-area: area3; 
-    margin-left: 12%;
+    margin-left: -499px;
+    margin-top: 40px;
 }
 .selectperso{
     border-radius: 5px;
@@ -81,14 +82,16 @@ select option :hover {
   }
   .button1{
     grid-area: area4; 
-    margin-left: 50%;
-    margin-top: 5%;
+    margin-left: -70px;
+    margin-top: 246px;
   }
   .description1{
     grid-area: area5; 
     margin-left: 10%;
     text-align: center;
     line-height: 1.5;
+    margin-top: -15px;
+
   }
 
   li{
@@ -96,7 +99,7 @@ select option :hover {
 }
 .input-fraction{
   grid-area: area6;
-  margin-left: -30%;
+  margin-left: -162px;
    
 }
 #inputFaction{
@@ -115,7 +118,10 @@ select option :hover {
 }
 .gridfaction{
     grid-area: area7;
-    margin-left: 60%;
+    
+    margin-right: 285px;
+    margin-left: -92px;
+    margin-top: 15px;
 }
 .factionimg{
     position: relative;
@@ -196,11 +202,13 @@ select option :hover {
     border-right: 200px;}
 
   .grid8{
-    margin-left: 30%;
+    
+    margin-left: 210px;
+    margin-top: -120px;
   }
  .grid10{
   grid-area: area10;
-  margin-left: -207px;
+  margin-left: -114px;;
   width: 100%;
  }
  .bg{
@@ -358,14 +366,22 @@ padding-top: 66%;
   grid-area: area11;
   margin-left: 85%;
   
+  
 }
 .grid13{
   grid-area: area13;
   margin-right: auto;
+ 
   
 }
 .grid14{
   grid-area: area14;
-  margin-left: -47px;
-  margin-top: 8px;
+  margin-left: 80px;
+  margin-top: -110px;
+}
+.formcontainer{
+  grid-area: area2 / area14 / area3 / area4;
+}
+.form2{
+  grid-area: area6 / area8 / area9 ;
 }
