--- a/php/includes/head.html
+++ b/php/includes/head.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <link rel="stylesheet" href="../CSS/Acceuil.css">
     <link rel="stylesheet" href="../CSS/select.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./CSS/add.css" />
 
     <script src="../script/script.js"></script>
 
