--- a/php/CSS/select.css
+++ b/php/CSS/select.css
@@ -73,10 +73,8 @@
     grid-column-end:  3;
     grid-row-start: 2 ;
     grid-row-end:4 ;
-    margin-top: 10px;
     border-radius: 17px;
     background: rgba(0, 0, 0, 0.40);
-    
 }
 #selecteam1{
     grid-column-start:  1;
@@ -138,4 +136,9 @@ h2{
     border-radius: 17px;
     background: rgba(0, 0, 0, 0.40);
     color: white;
+}
+#returnbtn{
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
