--- a/php/CSS/game.css
+++ b/php/CSS/game.css
@@ -14,3 +14,27 @@
     position: fixed;
     bottom: 0px;
 }
+.entite {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.entite img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+.entite .nom {
+  font-weight: bold;
+}
+.entite .vie {
+  width: 100px;
+  height: 10px;
+  background-color: lightgray;
+  margin-top: 5px;
+}
+.entite .vie span {
+  display: block;
+  height: 100%;
+  background-color: green;
+}
