--- a/php/CSS/select.css
+++ b/php/CSS/select.css
@@ -130,6 +130,7 @@ h2{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    row-gap : 25px;
     align-items: center;
     width: 100%;
     height: 65px;
