--- a/php/CSS/select.css
+++ b/php/CSS/select.css
@@ -127,11 +127,6 @@ h2{
     width: 20%;
 }
 .players{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    row-gap : 25px;
-    align-items: center;
     width: 100%;
     height: 65px;
     border-radius: 17px;
@@ -142,4 +137,34 @@ h2{
     position: absolute;
     left: 0;
     bottom: 0;
+}
+.players{
+    display: grid;
+    grid-template-columns: 55% 15% 20%;
+    column-gap: 1%;
+    grid-template-rows: 100%;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    margin-bottom: 10px;
+}
+#playername{
+    grid-column-start:  1;
+    grid-column-end:  2;
+    grid-row-start: 1;
+    grid-row-end:2 ;
+    font-size: 25px;
+}
+#playerclass{
+    grid-column-start:  2;
+    grid-column-end:  3;
+    grid-row-start: 1 ;
+    grid-row-end:2 ;
+}
+#playerlvl{
+    grid-column-start:  3;
+    grid-column-end:  4;
+    grid-row-start: 1 ;
+    grid-row-end:2 ;
+    font-size: 25px;
 }
