--- a/php/CSS/game.css
+++ b/php/CSS/game.css
@@ -5,14 +5,43 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    display: flex;
+    flex-wrap: wrap;
 }
-.historique{
-    width: 100%;
-    height: 300px;
-    border-radius: 10px;
-    background: rgba(217, 217, 217, 0.70);
-    position: fixed;
-    bottom: 0px;
+#historique {
+  border-radius: 10px;
+  background: rgba(217, 217, 217, 0.70);
+  overflow: auto;
+  height: 231px;
+  width: 100%;
+  bottom: 0px;
+  position: absolute;
+  gap: 20px;
+  flex-direction: column;
+  display: flex;
+}
+
+#historique div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#historique div:nth-child(1){
+  padding-top: 10px;
+}
+#resultatCombat{
+  display: flex;
+  width: 100%;
+  height: 100px;
+  font-size: 26px;
+  justify-content: center;
+  align-items: center;
+}
+#equipe1{
+  width: 90vh;
+}
+#equipe2{
+  width: 50vh;
 }
 .entite {
     display: flex;
