--- a/php/CSS/game.css
+++ b/php/CSS/game.css
@@ -7,6 +7,8 @@
     position: relative;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
 }
 #historique {
   border-radius: 10px;
@@ -16,9 +18,10 @@
   width: 100%;
   bottom: 0px;
   position: absolute;
-  gap: 20px;
+  gap: 14px;
   flex-direction: column;
   display: flex;
+  font-size: 30px;
 }
 
 #historique div {
@@ -36,17 +39,24 @@
   font-size: 26px;
   justify-content: center;
   align-items: center;
+  font-size: 70px;
+  position: absolute;
+  bottom: 245px;
 }
 #equipe1{
-  width: 90vh;
+  display: flex;
+  flex-direction: column;
+  
 }
 #equipe2{
-  width: 50vh;
+  display: flex;
+  flex-direction: column;
 }
 .entite {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    gap: 50px;
 }
 .entite img {
   width: 50px;
