--- a/php/CSS/game.css
+++ b/php/CSS/game.css
@@ -10,6 +10,10 @@
     justify-content: space-around;
     align-items: center;
 }
+#game img{
+  height: 165px;
+  width: auto;
+}
 #historique {
   border-radius: 10px;
   background: rgba(217, 217, 217, 0.70);
@@ -44,11 +48,17 @@
   bottom: 245px;
 }
 #equipe1{
+  transform: translate(-65px, 10px);
   display: flex;
   flex-direction: column;
   
 }
-#equipe2{
+#equipe1 img{
+  transform: translate(23px, 0px);
+}
+#equipe2 img{
+  margin-right: 20px;
+  transform: scaleX(-1);
   display: flex;
   flex-direction: column;
 }
@@ -56,11 +66,25 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-    gap: 50px;
+    flex-direction: column;
+}
+.entite:nth-child(1) {
+  transform: translate(180px,272px);
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  flex-direction: column;
+}
+.entite:nth-child(5) {
+  transform: translate(169px,-341px);
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  flex-direction: column;
 }
 .entite img {
-  width: 50px;
-  height: 50px;
+  width: auto;
+  height: 150px;
   margin-right: 10px;
 }
 .entite .nom {
