--- a/php/CSS/game.css
+++ b/php/CSS/game.css
@@ -53,15 +53,13 @@
   flex-direction: column;
   
 }
-#equipe1 img{
-  transform: translate(23px, 0px);
-}
 #equipe2 img{
   margin-right: 20px;
   transform: scaleX(-1);
   display: flex;
   flex-direction: column;
 }
+
 .entite {
     display: flex;
     align-items: center;
@@ -100,4 +98,7 @@
   display: block;
   height: 100%;
   background-color: green;
+}
+.skale{
+  transform: scaleX(-1);
 }
