--- a/php/CSS/add.css
+++ b/php/CSS/add.css
@@ -7,7 +7,7 @@
     overflow: auto ;
 }
 .container-add{
-    width: 100%;
+    width: 98%;
     padding-right: var(--bs-gutter-x, 0.75rem);
     padding-left: var(--bs-gutter-x, 0.75rem);
     padding-top: var(--bs-gutter-x, 0.75rem);
@@ -19,12 +19,12 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 15px;
     grid-template-areas:
-    "area1 area1  area1"
+    ". .  area1"
     "area2 area14 area6"
     "area3 area7 area8 "
     "area4 . area9"
     "area5 . area10"
-    "area13 area12 area11"
+    "area13 . area11"
     ;
     
 }
@@ -33,8 +33,8 @@
     grid-area: area1;
 }
 .mute img{
-    width: 5%;
-    margin-left: 92%;
+  width: 15%;
+  margin-left: 498px;
 }
 
   
@@ -74,8 +74,8 @@
     margin-left: 15px;
     
     background-color: white;
-    HEIGHT: 20%;
-    font-size: 150%;
+    
+    font-size: 23px;
 }
 select option :hover {
     background-color: #b5c18a;
@@ -119,15 +119,19 @@ select option :hover {
     
 }
 .gridfaction{
-    grid-area: area7;
-    margin-left: -130px;
-    margin-top: 26px;
+  grid-area: area7;
+  margin-left: -160px;
+  margin-top: 26px;
 }
 .f{
-  display: flex;
-  flex-direction: column;
+  display: flex; }
+
+  .optionfaction{
+margin-left: 280px;
+margin-top: -110px;
+ 
   
-}
+}/*
 .factionimg1{
   display: flex;
   flex-direction: column;
@@ -144,7 +148,7 @@ select option :hover {
       display: flex;
       flex-direction: column;
 
-      }
+      }*/
   
   .text-overlay {
     background-color: rgba(0, 0, 0, 0.040);
@@ -155,7 +159,7 @@ select option :hover {
   
   .borderfaction {
     border-color: rgba(0, 0, 0, 0.043);
-    padding: 4px 120px;
+    padding: 4px 4px;
     border-radius: 10px;
     background-color: #00000040;
     font-family: Imprint MT Shadow;
@@ -165,11 +169,7 @@ select option :hover {
     border-left: 200px;
     border-right: 200px;}
 
-  .grid8{
-    
-    margin-left: 210px;
-    margin-top: -120px;
-  }
+  
  .grid10{
   grid-area: area10;
   margin-left: -114px;;
@@ -329,13 +329,13 @@ padding-top: 66%;
 
 .grid11{
   grid-area: area11;
-  margin-left: auto;
+  margin-left: 522px;
   
   
 }
 .grid13{
   grid-area: area13;
-  margin-right: auto;
+  margin-right: -300px;
  
   
 }
