--- a/php/CSS/game.css
+++ b/php/CSS/game.css
@@ -9,6 +9,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    overflow-y:scroll;
 }
 #game img{
   height: 165px;
