--- a/php/CSS/select.css
+++ b/php/CSS/select.css
@@ -14,8 +14,9 @@
     grid-template-columns: 30% 30% 30%;
     grid-template-rows: 9% 9% 53% 12%;
     column-gap:57px ;
-    row-gap: 47px;
+    row-gap: 70px;
     justify-content: center;
+    min-height: 100vh;
 }
 #team1{
     grid-column-start:  1;
@@ -58,7 +59,7 @@
     grid-column-start:  2;
     grid-column-end:  3;
     grid-row-start: 2 ;
-    grid-row-end:4;
+    grid-row-end:auto;
     border-radius: 17px;
     background: rgba(0, 0, 0, 0.40);
 }
@@ -67,7 +68,7 @@
 #selecteam1{
     grid-column-start:  1;
     grid-column-end:  2;
-    grid-row-start: 3 ;
+    grid-row-start: 2 ;
     grid-row-end:5 ;
     margin-top: 10px;
     border-radius: 17px;
@@ -76,7 +77,7 @@
 #selecteam2{
     grid-column-start:  3;
     grid-column-end:  4;
-    grid-row-start: 3 ;
+    grid-row-start: 2 ;
     grid-row-end:5  ;
     margin-top: 10px;
     border-radius: 17px;
@@ -106,7 +107,7 @@ h2{
 }
 .Imprint{
     font-size: 37px;
-    padding-top: 10px;
+    padding: 5px;
     font-family: 'Imprint MT Shadow', sans-serif;
 }
 .rotated{
@@ -125,8 +126,8 @@ h2{
 }
 #returnbtn{
     position: absolute;
-    left: 0;
-    bottom: 0;
+    bottom: 10px;
+    
 }
 .players{
     display: grid;
@@ -168,8 +169,9 @@ h2{
 #team1{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    /*justify-content: space-around;*/
     align-items: center;
+    height: 100px;
 }
 .selectFac{
     background-color:rgba(255, 0, 0, 0);
@@ -185,6 +187,7 @@ h2{
 #team2{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    /*justify-content: space-around;*/
     align-items: center;
+    height: 100px;
 }
